rnsc/tests/snapshots/error-lexer-strings-unknown_escape_sequence_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code "\u"
----- STDERR -----
[E001] Error: invalid escape sequence
   ╭─[ test_data/integration/error/lexer/strings/unknown_escape_sequence.rns:2:9 ]
   │
 2 │ .code "\u"
   │         ┬  
   │         ╰── invalid escape sequence '\u'
   │ 
   │ Note: The character '\u' is not a valid escape sequence.
───╯
----- HASH -----
not generated
