rnsc/tests/snapshots/error-lexer-strings-unsupported_octal_escape.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code "\123"
----- STDERR -----
[E-004] Error: invalid escape sequence
   ╭─[ test_data/integration/error/lexer/strings/unsupported_octal_escape.rns:2:9 ]
   │
 2 │ .code "\123"
   │         ┬  
   │         ╰── '\1' is not a valid escape sequence
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-004
───╯
----- HASH -----
not generated
