rnsc/tests/snapshots/error-lexer-strings-unterminated_string_after_escape_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String ending with backslash\
----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/unterminated_string_after_escape.rns:2:1 ]
   │
 2 │ "String ending with backslash\
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
