rnsc/tests/snapshots/error-lexer-strings-unterminated_string_at_eof_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"This string has no closing quote
----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/unterminated_string_at_eof.rns:2:1 ]
   │
 2 │ "This string has no closing quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
