rnsc/tests/snapshots/error-lexer-strings-unterminated_string_with_newline.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String that breaks
across lines"
.end
----- STDERR -----
[E-001] Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/unterminated_string_with_newline.rns:2:1 ]
   │
 2 │ "String that breaks
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Help: Close the string with a '"' on the same line.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-001
───╯
----- HASH -----
not generated
