rnsc/tests/snapshots/error-lexer-type_hints-at_Integer.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@Int
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/rns_integration/error/lexer/type_hints/at_Integer.rns:1:1 ]
   │
 1 │ @Int
   │ ──┬─  
   │   ╰─── '@Int' is not a recognized type hint
   │ 
   │ Help: Did you mean '@int'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- JAVAP -----
not generated
